<resources>
    <string name="app_name">AMERICAN TECH</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="error_invalid_password">contraseña incorrecta </string>

    <string name="error_field_required">usuario requerido </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">CENTRO ATLÉTICO AMÉRICA</string>
    <string name="titulo_vision">Visión</string>
    <string name="titulo_mision">Misión</string>
    <string name="vision">CENTRO ATLÉTICO AMÉRICA, “Constituirnos como la institución social por excelencia
dedicada a consolidar valores sociales, culturales y deportivos que permitan el crecimiento de
sus afiliados y sus familiares e impulsar la transformación consolidando un ambiente cada día
más idóneo para el desarrollo biopsicosocial de nuestras generaciones.”</string>
    <string name="mision">CENTRO ATLÉTICO AMÉRICA, “Brindar y promover el disfrute de sus socios y
familiares, en espacios aptos para actividades deportivas, culturales y sociales, fomentando la
unión familiar y consolidando el legado de sus fundadores.”</string>

    <string name="hello_world">Hello world!</string>

    <string name="titulo_cartelera_publica">Cartelera</string>
    <string name="title_activity_modificacion__perfil__usuario">Actualizacion de Datos</string>

    <string-array name="spinTipoPreferencia">
        <item>Deporte</item>
        <item>Cultura</item>
        <item>Musica</item>
    </string-array>

    <string-array name="spinPreferencia">
        <item>Tenis</item>
        <item>Futbol</item>
        <item>Natacion</item>
    </string-array>

    <string-array name="listPreferencia">
        <item>Beisbol</item>
        <item>Danza</item>
        <item>Arte</item>
        <item>Musica 80</item>
    </string-array>

    <string-array name="ListaInstalacionesStatic">
        <item>INSTALACIÓN</item>
        <item>SALÓN PRINCIPAL</item>
    </string-array>

    <string name="paswd">Contraseña Actual</string>
    <string name="paswdNvo">Contraseña Nueva</string>
    <string name="paswdNavoVeri">Vuelva a digitar la  contraseña</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string-array name="ListaEventosEventualidades">
        <item>EVENTO</item>
        <item>DIA DEL PADRE</item>

    </string-array>


    <string-array name="ListaTipoEventualidad">

        <item>EVENTUALIDAD</item>
        <item>MALA CONDUCTA</item>

    </string-array>


    <string-array name="TipoSugerencia">
        <item>SUGERENCIAS</item>
        <item>EVENTOS</item>
        <item>INSTALACIONES</item>

    </string-array>
    <string name="title_activity_opinion_postulacion">Opinion de Postulacion</string>
    <string name="title_activity_galeria">Galeria</string>

    <string name="title_activity_foto_galeria">FotoGaleria</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_contrasena">Contrasena</string>


</resources>
