<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucla.america.Contrasena">

    <EditText
        android:id="@+id/etPswdActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/paswd"/>

    <EditText
        android:id="@+id/etPswdNvo"
        android:layout_below="@+id/etPswdActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/paswdNvo"/>

    <EditText
        android:id="@+id/etPswdVerif"
        android:layout_below="@+id/etPswdNvo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:hint="@string/paswdNavoVeri"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPswdVerif"
        android:layout_alignParentRight="true"
        android:text="@string/aceptar"
        android:onClick="aceptar"/>
    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPswdVerif"
        android:text="@string/cancelar"
        android:onClick="cancelar"/>


</RelativeLayout>
